--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         
         <p id="pass">Password</p>
 
-        <input type="text" id="password">
+        <input type="password" id="password">
       </div>
       <button type="button" class="gonderButton" onclick="sayHello();"><span>Göndər</span></button>
       <div id="hello"></div>
